--- a/app/index.html
+++ b/app/index.html
@@ -12,7 +12,8 @@
     <link rel="icon" type="image/png" href="graphics/Zikes_logo.png" />
     <!-- Bootstrap core CSS -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/superhero/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.css" />
+    <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css" />
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.37.0/mapbox-gl.css' rel='stylesheet' />
 
     <!-- Custom styles for this template -->
     <link href="css/slider.css" rel="stylesheet">
@@ -82,7 +83,8 @@
     <!-- <script src="scripts/app.js"></script> -->
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/0.6.4/leaflet.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/mapbox-gl/0.37.0/mapbox-gl-dev.js"></script>    
     <script src="scripts/main.js"></script>
 
   </body>
