--- a/app/index.html
+++ b/app/index.html
@@ -13,7 +13,7 @@
     <!-- Bootstrap core CSS -->
     <link href="//cdnjs.cloudflare.com/ajax/libs/bootswatch/3.3.6/superhero/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css" />
-    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v0.37.0/mapbox-gl.css' rel='stylesheet' />
+    <link href='//api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.css' rel='stylesheet' />
 
     <!-- Custom styles for this template -->
     <link href="css/slider.css" rel="stylesheet">
@@ -84,7 +84,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.0/jquery.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/mapbox-gl/0.37.0/mapbox-gl-dev.js"></script>    
+    <script src="//api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js"></script>    
     <script src="scripts/main.js"></script>
 
   </body>
