Working with single response and reply

--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,7 @@
       <div id="popup" class="popup">
         <h3>Confirm Pin Location?</h3>
         <p>WARNING: RPIC has the responsibililty to maintain the safe control of the vehicle throughout the mission. </p>
-        <button onclick="hidePopup()">Close</button>
+        <button onclick="hidePopup()">Confirm Location</button>
       </div>
       <script>
         function showPopup() {
