pushing button appears in console

--- a/app/index.html
+++ b/app/index.html
@@ -52,12 +52,12 @@
         <li id="Confirm_Pins"><a href="#"> Confirm Pins </a></li>
       </ul>
 
-      <div id="popup" class="popup">
+      <!-- <div id="popup" class="popup">
         <h3>Confirm Pin Location?</h3>
         <p>WARNING: RPIC has the responsibililty to maintain the safe control of the vehicle throughout the mission. </p>
         <button onclick="hidePopup()">Confirm Location</button>
-      </div>
-      <script>
+      </div> -->
+      <!-- <script>
         function showPopup() {
           document.getElementById('popup').style.display = 'block';
         }
@@ -68,7 +68,7 @@
     
         var confirmPinsBtn = document.getElementById('Confirm_Pins');
         confirmPinsBtn.addEventListener('click', showPopup);
-      </script>
+      </script> -->
 
       <div class="container">
         <div class="navbar-header">
