--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,7 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
     <script src="//api.mapbox.com/mapbox-gl-js/v2.8.1/mapbox-gl.js"></script>    
-    <script src="scripts/main.js"></script>
+    <script src="scripts/main.js" type="text/javascript"></script>>
 
   </body>
 </html>
